--- a/test.ipynb
+++ b/test.ipynb
@@ -2,38 +2,113 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "4f401949",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from BD_simulator import MC_BESQ_gateway, MC_BESQviaLaguerre_gateway, exact_BESQ\n",
-    "import numpy as np\n",
-    "# J: Bessel function\n",
-    "from scipy.special import jv as J\n",
-    "# L: Laguerre polynomial\n",
-    "from scipy.special import  eval_laguerre as L"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "df76a9d8",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
+   "source": [
+    "# from BD_simulator import MC_BESQ_gateway, MC_BESQviaLaguerre_gateway, exact_BESQ, MC_BESQ_delay, MC_BESQviaLaguerre_delay\n",
+    "# from BD_simulator import MC_Laguerre_gateway, MC_Laguerre_delay\n",
+    "from BD_simulator2 import MC_BESQ_gateway, MC_Laguerre_gateway, exact_BESQ, exact_Laguerre\n",
+    "import numpy as np\n",
+    "import time\n",
+    "# J: Bessel function\n",
+    "from scipy.special import jv as J\n",
+    "# L: Laguerre polynomial\n",
+    "from scipy.special import  eval_laguerre as L\n",
+    "from math import comb\n",
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "b08ae6d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "52.476802110672\n",
+      "6.5972208976745605\n",
+      "49.68048620223999\n",
+      "6.6128010749816895\n",
       "Test  1 : Bessel functions\n",
       "Initial values:  range(0, 10)\n",
-      "Times:  [0, 0.2, 0.5, 1, 2, 5]\n",
+      "Times:  [1, 2, 5, 10, 50]\n",
       "Estimates from dBESQ simulation:\n",
-      "[[1.0, 0.2208, -0.189, -0.3734, -0.3972, -0.3289, -0.2094, -0.0865, 0.0443, 0.1525], [0.8262, 0.1789, -0.1562, -0.3131, -0.3266, -0.2685, -0.1694, -0.0629, 0.0317, 0.1222], [0.6239, 0.1205, -0.1207, -0.2212, -0.2344, -0.1904, -0.1254, -0.0433, 0.0374, 0.0854], [0.3922, 0.0838, -0.0605, -0.1271, -0.1433, -0.1201, -0.0788, -0.0308, 0.0064, 0.0527], [0.1437, 0.0381, -0.0159, -0.0455, -0.0484, -0.0454, -0.0224, -0.0121, 0.0004, 0.0246], [0.0153, -0.0037, 0.0104, 0.0011, -0.0034, 0.0033, 0.001, -0.0064, -0.0106, 0.0001]]\n",
+      "[[0.3852, 0.0849, -0.0709, -0.1378, -0.1455, -0.1177, -0.0754, -0.0289, 0.0181, 0.0584], [0.1467, 0.032, -0.0262, -0.051, -0.0531, -0.0433, -0.0278, -0.0121, 0.0061, 0.0188], [0.0095, 0.0007, 0.0014, -0.0012, -0.0016, -0.0005, 0.0019, 0.0004, 0.0014, 0.0025], [0.0027, 0.0005, -0.0013, 0.0002, 0.0009, 0.0024, -0.0007, 0.0007, 0.0003, -0.0], [-0.0005, 0.0028, 0.0004, -0.0009, 0.0003, -0.0005, -0.0014, 0.0001, 0.0007, 0.0002]]\n",
       "Estimates from dLaguerre simulation:\n",
-      "[[1.0, 0.2088, -0.1954, -0.374, -0.3961, -0.3315, -0.2083, -0.0807, 0.0487, 0.1509], [0.8274, 0.1928, -0.1659, -0.3095, -0.323, -0.2653, -0.1719, -0.0667, 0.0442, 0.1299], [0.6043, 0.1605, -0.1144, -0.2089, -0.2489, -0.1804, -0.1174, -0.037, 0.0284, 0.0881], [0.3868, 0.0785, -0.0799, -0.1236, -0.1568, -0.1225, -0.08, -0.0349, 0.0126, 0.0571], [0.1454, 0.0553, -0.0117, -0.0466, -0.0628, -0.0597, -0.0464, -0.0211, 0.0128, 0.0302], [0.0335, 0.0274, -0.0575, -0.0168, -0.0029, 0.0574, 0.0091, 0.0145, 0.0445, 0.056]]\n",
+      "[[0.3806, 0.088, -0.0697, -0.1365, -0.1459, -0.1242, -0.0749, -0.0259, 0.0169, 0.0561], [0.143, 0.0429, -0.0269, -0.0483, -0.042, -0.0501, -0.0253, -0.0154, 0.0094, 0.011], [0.0072, 0.0106, -0.0032, 0.0031, -0.0041, -0.027, 0.0023, 0.013, -0.0157, -0.0017], [0.0369, -0.0407, -0.1116, -0.0151, -0.0546, 0.1205, 0.1733, 0.0347, 0.0021, -0.1272], [-923952.1681, -703261.0923, 1524542.5289, 454903.0513, -1205799.6964, 1934126.1568, -1771.2661, -10915.897, -2048989.5293, 1857331.3989]]\n",
+      "Estimates from dBESQ simulation with delay:\n",
+      "[[0.3689, 0.0826, -0.0693, -0.1375, -0.1472, -0.1196, -0.0773, -0.0285, 0.0168, 0.0558], [0.1394, 0.0334, -0.0272, -0.051, -0.0534, -0.0435, -0.0284, -0.0097, 0.0064, 0.0204], [0.0089, 0.0017, -0.0002, 0.0002, -0.0012, -0.002, -0.0018, -0.0024, -0.0001, 0.0004], [0.0019, 0.0018, 0.0023, -0.0006, -0.0004, 0.001, -0.0003, -0.0013, 0.001, 0.0008], [-0.0005, -0.0003, -0.0008, 0.0002, 0.0001, 0.0005, -0.0002, -0.0018, 0.0002, -0.0004]]\n",
+      "Estimates from dLaguerre simulation with delay:\n",
+      "[[0.3676, 0.0834, -0.0746, -0.1378, -0.1452, -0.1193, -0.0767, -0.0293, 0.0156, 0.0544], [0.1377, 0.0309, -0.0257, -0.0494, -0.0524, -0.0434, -0.028, -0.0095, 0.0067, 0.0226], [0.0057, 0.0027, -0.0031, -0.0046, -0.0011, -0.002, -0.0023, -0.0017, 0.0012, 0.002], [0.0012, 0.0013, 0.0006, -0.0002, -0.0014, 0.0, 0.0003, 0.0011, -0.001, 0.0], [-0.0005, -0.0004, -0.0011, 0.0004, -0.0001, 0.0007, 0.0001, -0.0003, 0.0003, 0.0007]]\n",
       "Exact BESQ computation:\n",
-      "[[1.0, 0.2239, -0.1965, -0.3749, -0.3971, -0.3269, -0.2101, -0.0787, 0.0458, 0.1506], [0.8187, 0.1833, -0.1609, -0.307, -0.3252, -0.2676, -0.172, -0.0645, 0.0375, 0.1233], [0.6065, 0.1358, -0.1192, -0.2274, -0.2409, -0.1983, -0.1274, -0.0478, 0.0278, 0.0914], [0.3679, 0.0824, -0.0723, -0.1379, -0.1461, -0.1203, -0.0773, -0.029, 0.0169, 0.0554], [0.1353, 0.0303, -0.0266, -0.0507, -0.0537, -0.0442, -0.0284, -0.0107, 0.0062, 0.0204], [0.0067, 0.0015, -0.0013, -0.0025, -0.0027, -0.0022, -0.0014, -0.0005, 0.0003, 0.001]]\n"
+      "[[0.3679, 0.0824, -0.0723, -0.1379, -0.1461, -0.1203, -0.0773, -0.029, 0.0169, 0.0554], [0.1353, 0.0303, -0.0266, -0.0507, -0.0537, -0.0442, -0.0284, -0.0107, 0.0062, 0.0204], [0.0067, 0.0015, -0.0013, -0.0025, -0.0027, -0.0022, -0.0014, -0.0005, 0.0003, 0.001], [0.0, 0.0, -0.0, -0.0, -0.0, -0.0, -0.0, -0.0, 0.0, 0.0], [0.0, 0.0, -0.0, -0.0, -0.0, -0.0, -0.0, -0.0, 0.0, 0.0]]\n",
+      "\n",
+      "Errors of dBESQ simulation:\n",
+      "[[ 1.73e-02  2.50e-03  1.40e-03  1.00e-04  6.00e-04  2.60e-03  1.90e-03\n",
+      "   1.00e-04  1.20e-03  3.00e-03]\n",
+      " [ 1.14e-02  1.70e-03  4.00e-04 -3.00e-04  6.00e-04  9.00e-04  6.00e-04\n",
+      "  -1.40e-03 -1.00e-04 -1.60e-03]\n",
+      " [ 2.80e-03 -8.00e-04  2.70e-03  1.30e-03  1.10e-03  1.70e-03  3.30e-03\n",
+      "   9.00e-04  1.10e-03  1.50e-03]\n",
+      " [ 2.70e-03  5.00e-04 -1.30e-03  2.00e-04  9.00e-04  2.40e-03 -7.00e-04\n",
+      "   7.00e-04  3.00e-04 -0.00e+00]\n",
+      " [-5.00e-04  2.80e-03  4.00e-04 -9.00e-04  3.00e-04 -5.00e-04 -1.40e-03\n",
+      "   1.00e-04  7.00e-04  2.00e-04]]\n",
+      "\n",
+      "Errors of dLaguerre simulation:\n",
+      "[[ 1.27000000e-02  5.60000000e-03  2.60000000e-03  1.40000000e-03\n",
+      "   2.00000000e-04 -3.90000000e-03  2.40000000e-03  3.10000000e-03\n",
+      "   0.00000000e+00  7.00000000e-04]\n",
+      " [ 7.70000000e-03  1.26000000e-02 -3.00000000e-04  2.40000000e-03\n",
+      "   1.17000000e-02 -5.90000000e-03  3.10000000e-03 -4.70000000e-03\n",
+      "   3.20000000e-03 -9.40000000e-03]\n",
+      " [ 5.00000000e-04  9.10000000e-03 -1.90000000e-03  5.60000000e-03\n",
+      "  -1.40000000e-03 -2.48000000e-02  3.70000000e-03  1.35000000e-02\n",
+      "  -1.60000000e-02 -2.70000000e-03]\n",
+      " [ 3.69000000e-02 -4.07000000e-02 -1.11600000e-01 -1.51000000e-02\n",
+      "  -5.46000000e-02  1.20500000e-01  1.73300000e-01  3.47000000e-02\n",
+      "   2.10000000e-03 -1.27200000e-01]\n",
+      " [-9.23952168e+05 -7.03261092e+05  1.52454253e+06  4.54903051e+05\n",
+      "  -1.20579970e+06  1.93412616e+06 -1.77126610e+03 -1.09158970e+04\n",
+      "  -2.04898953e+06  1.85733140e+06]]\n",
+      "Errors of dBESQ simulation with delay:\n",
+      "[[ 1.0e-03  2.0e-04  3.0e-03  4.0e-04 -1.1e-03  7.0e-04  0.0e+00  5.0e-04\n",
+      "  -1.0e-04  4.0e-04]\n",
+      " [ 4.1e-03  3.1e-03 -6.0e-04 -3.0e-04  3.0e-04  7.0e-04  0.0e+00  1.0e-03\n",
+      "   2.0e-04  0.0e+00]\n",
+      " [ 2.2e-03  2.0e-04  1.1e-03  2.7e-03  1.5e-03  2.0e-04 -4.0e-04 -1.9e-03\n",
+      "  -4.0e-04 -6.0e-04]\n",
+      " [ 1.9e-03  1.8e-03  2.3e-03 -6.0e-04 -4.0e-04  1.0e-03 -3.0e-04 -1.3e-03\n",
+      "   1.0e-03  8.0e-04]\n",
+      " [-5.0e-04 -3.0e-04 -8.0e-04  2.0e-04  1.0e-04  5.0e-04 -2.0e-04 -1.8e-03\n",
+      "   2.0e-04 -4.0e-04]]\n",
+      "Errors of dLaguerre simulation with delay:\n",
+      "[[-3.0e-04  1.0e-03 -2.3e-03  1.0e-04  9.0e-04  1.0e-03  6.0e-04 -3.0e-04\n",
+      "  -1.3e-03 -1.0e-03]\n",
+      " [ 2.4e-03  6.0e-04  9.0e-04  1.3e-03  1.3e-03  8.0e-04  4.0e-04  1.2e-03\n",
+      "   5.0e-04  2.2e-03]\n",
+      " [-1.0e-03  1.2e-03 -1.8e-03 -2.1e-03  1.6e-03  2.0e-04 -9.0e-04 -1.2e-03\n",
+      "   9.0e-04  1.0e-03]\n",
+      " [ 1.2e-03  1.3e-03  6.0e-04 -2.0e-04 -1.4e-03  0.0e+00  3.0e-04  1.1e-03\n",
+      "  -1.0e-03  0.0e+00]\n",
+      " [-5.0e-04 -4.0e-04 -1.1e-03  4.0e-04 -1.0e-04  7.0e-04  1.0e-04 -3.0e-04\n",
+      "   3.0e-04  7.0e-04]]\n"
      ]
     }
    ],
@@ -42,12 +117,39 @@
     "# TEST: (reparametrized) Bessel functions\n",
     "# Methods: dBESQ simulation, dLaguerre simulation, exact BESQ\n",
     "testno += 1\n",
-    "num_paths = 10**4\n",
+    "num_paths = 10**5\n",
     "x0_array = range(10)\n",
-    "times = [0, 0.2, 0.5, 1, 2, 5]\n",
-    "dBESQ_estimates = [[MC_BESQ_gateway(N = num_paths, t = t, x0 = x0, test = 'bessel') for x0 in x0_array] for t in times]\n",
-    "dLaguerre_estimates = [[MC_BESQviaLaguerre_gateway(N = num_paths, t = t, x0 = x0, test = 'bessel') for x0 in x0_array] for t in times]\n",
+    "# times = [0, 0.2, 0.5, 1, 2, 5]\n",
+    "times = [1, 2, 5, 10, 50]\n",
+    "\n",
+    "np.random.seed(0)\n",
+    "\n",
+    "start = time.time()\n",
+    "dBESQ_estimates = [[MC_BESQ_gateway(N = num_paths, t = t, x0 = x0, test = 'bessel', method = 'bessel') \n",
+    "                    for x0 in x0_array] for t in times]\n",
+    "time1 = time.time() - start\n",
+    "print(time1)\n",
+    "\n",
+    "start = time.time()\n",
+    "dLaguerre_estimates = [[MC_BESQ_gateway(N = num_paths, t = t, x0 = x0, test = 'bessel', method = 'laguerre') \n",
+    "                        for x0 in x0_array] for t in times]\n",
+    "time2 = time.time() - start\n",
+    "print(time2)\n",
+    "\n",
+    "start = time.time()\n",
+    "dBESQdelay_estimates = [[MC_BESQ_gateway(N = num_paths, t = t, x0 = x0, test = 'bessel', method = 'bessel-delay')\n",
+    "                         for x0 in x0_array] for t in times]\n",
+    "time3 = time.time() - start\n",
+    "print(time3)\n",
+    "\n",
+    "start = time.time()\n",
+    "dLaguerredelay_estimates = [[MC_BESQ_gateway(N = num_paths, t = t, x0 = x0, test = 'bessel', method = 'laguerre-delay')\n",
+    "                             for x0 in x0_array] for t in times]\n",
+    "time4 = time.time() - start\n",
+    "print(time4)\n",
+    "\n",
     "BESQ_values = [[exact_BESQ(t = t, x0 = x0) for x0 in x0_array] for t in times]\n",
+    "\n",
     "print('Test ', testno, ': Bessel functions')\n",
     "print('Initial values: ', x0_array)\n",
     "print('Times: ', times)\n",
@@ -55,32 +157,31 @@
     "print(dBESQ_estimates)\n",
     "print('Estimates from dLaguerre simulation:')\n",
     "print(dLaguerre_estimates)\n",
+    "print('Estimates from dBESQ simulation with delay:')\n",
+    "print(dBESQdelay_estimates)\n",
+    "print('Estimates from dLaguerre simulation with delay:')\n",
+    "print(dLaguerredelay_estimates)\n",
     "print('Exact BESQ computation:')\n",
-    "print(BESQ_values)"
+    "print(BESQ_values)\n",
+    "\n",
+    "print('\\nErrors of dBESQ simulation:')\n",
+    "print(np.asarray(dBESQ_estimates) - np.asarray(BESQ_values))\n",
+    "print('\\nErrors of dLaguerre simulation:')\n",
+    "print(np.asarray(dLaguerre_estimates) - np.asarray(BESQ_values))\n",
+    "print('Errors of dBESQ simulation with delay:')\n",
+    "print(np.asarray(dBESQdelay_estimates) - np.asarray(BESQ_values))\n",
+    "print('Errors of dLaguerre simulation with delay:')\n",
+    "print(np.asarray(dLaguerredelay_estimates) - np.asarray(BESQ_values))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "ec090d23",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test  2 : Polynomials\n",
-      "Initial values:  range(0, 10)\n",
-      "Times:  [0, 0.2, 0.5, 1, 2, 5]\n",
-      "Estimates from dBESQ simulation:\n",
-      "[[1.6243, -0.5194, -10.0524, -32.7677, -78.5305, -147.1901, -254.3739, -400.9901, -594.4521, -821.0643], [1.3931, -4.2732, -19.9653, -53.7704, -111.3012, -208.4533, -328.1857, -507.4151, -723.0023, -989.7823], [0.4249, -12.9641, -43.7205, -104.1599, -172.262, -310.2599, -455.7005, -694.8199, -930.4269, -1333.8587], [-6.0379, -41.0676, -100.9731, -199.7848, -331.7918, -529.6557, -719.4619, -1015.1645, -1431.9475, -1901.7032], [-60.8215, -146.9658, -308.9751, -489.4277, -725.5141, -1166.1626, -1598.7012, -2048.416, -2793.6196, -3246.7083], [-849.3391, -1258.2627, -1850.4283, -2898.6243, -3541.8221, -4564.2592, -5972.7743, -7070.9683, -8506.414, -10554.1422]]\n",
-      "Estimates from dLaguerre simulation:\n",
-      "[[1.6243, -0.5086, -9.947, -33.7752, -78.16, -147.3003, -253.0751, -396.4018, -585.7101, -823.8015], [1.4144, -3.4467, -22.279, -58.8294, -112.773, -210.994, -335.6445, -533.1895, -724.2963, -1034.8276], [0.0042, -12.5989, -43.1977, -96.9367, -162.8564, -327.0881, -450.5438, -670.7074, -997.4734, -1289.5137], [-6.024, -44.0815, -108.8654, -194.6978, -315.4633, -538.3632, -744.3411, -1048.1573, -1505.5384, -1891.9461], [-53.4333, -154.874, -311.8402, -546.1134, -827.7773, -1186.7904, -1595.3894, -2070.9159, -2633.26, -3095.5956], [-859.6491, -1903.3559, -2107.9153, -2577.9976, -3607.1303, -5077.1435, -5223.4384, -6900.2473, -9277.1018, -10011.27]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# TEST: polynomials\n",
     "# Methods: dBESQ simulation, dLaguerre simulation\n",
@@ -113,8 +214,90 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "id": "c0b294ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13.299838066101074\n",
+      "6.392780065536499\n",
+      "Initial values:  range(0, 10)\n",
+      "Times:  [1, 1.2, 1.5, 2, 5]\n",
+      "Estimates from dLaguerre simulation:\n",
+      "[[0.3815, -0.0048, -0.3713, -0.7572, -1.113, -1.4778, -1.8448, -2.2419, -2.5856, -2.9625], [0.3083, -0.004, -0.309, -0.6014, -0.9141, -1.2042, -1.5044, -1.8246, -2.1182, -2.4245], [0.2279, -0.0024, -0.2348, -0.447, -0.6723, -0.9051, -1.1203, -1.3391, -1.5535, -1.8017], [0.1357, -0.0081, -0.1379, -0.2675, -0.4024, -0.5475, -0.6849, -0.8092, -0.9465, -1.0586], [0.0045, -0.0024, -0.0198, -0.0097, -0.0233, -0.0171, -0.0362, -0.0337, -0.048, -0.0505]]\n",
+      "Estimates from dLaguerre simulation with delay:\n",
+      "[[0.3685, 0.0117, -0.3707, -0.7283, -1.0975, -1.475, -1.8546, -2.2169, -2.5986, -2.9573], [0.3114, 0.0008, -0.3046, -0.604, -0.9117, -1.2216, -1.5146, -1.8028, -2.1175, -2.4289], [0.2319, 0.0024, -0.2293, -0.4481, -0.6746, -0.907, -1.1262, -1.3543, -1.5886, -1.7975], [0.1374, -0.0003, -0.1461, -0.2692, -0.4087, -0.5573, -0.6865, -0.8137, -0.9514, -1.0903], [0.0082, 0.0008, -0.0031, -0.0121, -0.02, -0.0295, -0.0321, -0.0473, -0.0492, -0.0548]]\n",
+      "Exact Laguerre computation:\n",
+      "[[0.3679, 0.0, -0.3679, -0.7358, -1.1036, -1.4715, -1.8394, -2.2073, -2.5752, -2.943], [0.3012, 0.0, -0.3012, -0.6024, -0.9036, -1.2048, -1.506, -1.8072, -2.1084, -2.4096], [0.2231, 0.0, -0.2231, -0.4463, -0.6694, -0.8925, -1.1157, -1.3388, -1.5619, -1.785], [0.1353, 0.0, -0.1353, -0.2707, -0.406, -0.5413, -0.6767, -0.812, -0.9473, -1.0827], [0.0067, 0.0, -0.0067, -0.0135, -0.0202, -0.027, -0.0337, -0.0404, -0.0472, -0.0539]]\n",
+      "\n",
+      "Errors of dLaguerre simulation:\n",
+      "[[ 0.0136 -0.0048 -0.0034 -0.0214 -0.0094 -0.0063 -0.0054 -0.0346 -0.0104\n",
+      "  -0.0195]\n",
+      " [ 0.0071 -0.004  -0.0078  0.001  -0.0105  0.0006  0.0016 -0.0174 -0.0098\n",
+      "  -0.0149]\n",
+      " [ 0.0048 -0.0024 -0.0117 -0.0007 -0.0029 -0.0126 -0.0046 -0.0003  0.0084\n",
+      "  -0.0167]\n",
+      " [ 0.0004 -0.0081 -0.0026  0.0032  0.0036 -0.0062 -0.0082  0.0028  0.0008\n",
+      "   0.0241]\n",
+      " [-0.0022 -0.0024 -0.0131  0.0038 -0.0031  0.0099 -0.0025  0.0067 -0.0008\n",
+      "   0.0034]]\n",
+      "Errors of dLaguerre simulation with delay:\n",
+      "[[ 0.0006  0.0117 -0.0028  0.0075  0.0061 -0.0035 -0.0152 -0.0096 -0.0234\n",
+      "  -0.0143]\n",
+      " [ 0.0102  0.0008 -0.0034 -0.0016 -0.0081 -0.0168 -0.0086  0.0044 -0.0091\n",
+      "  -0.0193]\n",
+      " [ 0.0088  0.0024 -0.0062 -0.0018 -0.0052 -0.0145 -0.0105 -0.0155 -0.0267\n",
+      "  -0.0125]\n",
+      " [ 0.0021 -0.0003 -0.0108  0.0015 -0.0027 -0.016  -0.0098 -0.0017 -0.0041\n",
+      "  -0.0076]\n",
+      " [ 0.0015  0.0008  0.0036  0.0014  0.0002 -0.0025  0.0016 -0.0069 -0.002\n",
+      "  -0.0009]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 1\n",
+    "num_paths = 10**5\n",
+    "x0_array = range(10)\n",
+    "# times = [0, 0.2, 0.5, 1, 2, 5]\n",
+    "times = [1, 1.2, 1.5, 2, 5]\n",
+    "\n",
+    "start = time.time()\n",
+    "dLaguerre_estimates = [[MC_Laguerre_gateway(N = num_paths, t = t, x0 = x0, test = 'laguerre', method = 'laguerre', args = {'n': n}) \n",
+    "                    for x0 in x0_array] for t in times]\n",
+    "time1 = time.time() - start\n",
+    "print(time1)\n",
+    "\n",
+    "start = time.time()\n",
+    "dLaguerredelay_estimates = [[MC_Laguerre_gateway(N = num_paths, t = t, x0 = x0, test = 'laguerre', method = 'laguerre-delay', args = {'n': n}) \n",
+    "                         for x0 in x0_array] for t in times]\n",
+    "time2 = time.time() - start\n",
+    "print(time2)\n",
+    "\n",
+    "Laguerre_values = [[exact_Laguerre(t = t, x0 = x0, n = n) for x0 in x0_array] for t in times]\n",
+    "\n",
+    "print('Initial values: ', x0_array)\n",
+    "print('Times: ', times)\n",
+    "print('Estimates from dLaguerre simulation:')\n",
+    "print(dLaguerre_estimates)\n",
+    "print('Estimates from dLaguerre simulation with delay:')\n",
+    "print(dLaguerredelay_estimates)\n",
+    "print('Exact Laguerre computation:')\n",
+    "print(Laguerre_values)\n",
+    "\n",
+    "print('\\nErrors of dLaguerre simulation:')\n",
+    "print(np.asarray(dLaguerre_estimates) - np.asarray(Laguerre_values))\n",
+    "print('Errors of dLaguerre simulation with delay:')\n",
+    "print(np.asarray(dLaguerredelay_estimates) - np.asarray(Laguerre_values))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "49a48d07",
+   "id": "8e7a92d3",
    "metadata": {},
    "outputs": [],
    "source": []
